<resources>
    <string name="app_name">Pertemuan 8a</string>
    <string name="BtnBersihkan">BERSIHKAN</string>
    <string name="DtHasil"></string>
    <string name="HtBil1">Masukkan bilangan pertama ...</string>
    <string name="HtApp">Masukkan Dua Angka</string>
    <string name="HtBil2">Masukkan bilangan kedua ...</string>
    <string name="BtnMin">-</string>
    <string name="BtnPlus">+</string>
    <string name="BtnKali">x</string>
    <string name="BtnBagi">/</string>
    <string name="aplikasi_ganjil_genap">Aplikasi Ganjil Genap</string>
    <string name="DtBilangan"></string>
    <string name="BtnCek">CEK BILANGAN</string>
    <string name="InBilangan">Masukkan bilangan ...</string>
    <string name="BtnReset">RESET</string>
</resources>
